# sp_alexparsons

./: .gitattributes  .gitignore  .gitmodules  Dockerfile  docker-compose.yml  pyproject.toml  readme.MD
.devcontainer/: devcontainer.json  initializeCommand  initializeCommand.cmd  initializeCommand.ps1
.github/workflows/: new-doc.yml  publisher.yml  updater.yml
_conf/: settings.yaml
_conf/_publish_template/: index.html
_docs/_template/: cookiecutter.json
_docs/drawing-lines/: 25804358301_866d3e718e_k_AtN93Dx.jpgcom.dropbox.attributes  25804358301_866d3e718e_k_AtN93Dx.jpgcom.dropbox.attrs  Drawing lines on maps.pdfZone.Identifier  Drawing lines on maps.pdfcom.dropbox.attrs  _paragraphs (DESKTOP-CRT6FU4's conflicted copy 2020-02-19).yaml  _paragraphs (DESKTOP-CRT6FU4's conflicted copy 2020-02-19).yamlcom.dropbox.attrs  _paragraphs.yaml  _paragraphs.yamlcom.dropbox.attrs  document (DESKTOP-CRT6FU4's conflicted copy 2020-02-19).md  document (DESKTOP-CRT6FU4's conflicted copy 2020-02-19).mdcom.dropbox.attrs  document.md  document.mdcom.dropbox.attrs  drawing-lines.zipcom.dropbox.attributes  drawing-lines.zipcom.dropbox.attrs  settings-for-render.json  settings.yaml  settings.yamlcom.dropbox.attrs
_docs/equal-seats/: Equal seats, unequal voters.docxZone.Identifier  Equal seats, unequal voters.docxcom.dropbox.attrs  Equal seats, unequal voters.pdfZone.Identifier  Equal seats, unequal voters.pdfcom.dropbox.attrs  _paragraphs.yaml  document.md  (+7 more)
script/: bootstrap  commit  commitcom.dropbox.attrs  console  pushcom.dropbox.attrs  server  setup
(+68 files in other folders)
